--- a/src/app/components/one-post/one-post.component.html
+++ b/src/app/components/one-post/one-post.component.html
@@ -7,6 +7,7 @@
 
       </button>
       <div class="card-title">
+        <h3>Post</h3>
         Post no: 
       </div>
       <div class="card-text">
